--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "angular": "^1.6.2",
     "angular-animate": "^1.6.2",
+    "angular-file-saver": "^1.1.3",
     "angular-mocks": "^1.6.2",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
@@ -49,8 +50,9 @@
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
-    "lodash": "^4.17.4",
+    "lodash": "^3.9.3",
     "merge-stream": "^1.0.1",
+    "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
