--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "azure-storage": "^2.1.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.23.0",
-    "bcrypt": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "bootstrap": "^3.3.7",
