--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "jquery-ui": "^1.12.1",
     "bootstrap-wysiwyg": "*",
     "jquery.hotkeys": "*",
-    "angular-moment": "^1.0.1"
+    "angular-moment": "^1.0.1",
+    "angular-ui-router-styles": "^1.1.0"
   }
 }
