--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "paypal-rest-sdk": "^1.7.1",
     "pg": "^6.1.2",
     "run-sequence": "^1.2.2",
     "sequelize": "^3.30.2",
