--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sequelize": "^3.30.2",
     "serve-favicon": "^2.4.0",
     "sinon": "^1.17.7",
+    "socket.io": "^1.7.4",
     "streamifier": "^0.1.1",
     "supertest": "^3.0.0"
   }
