--- a/package.json
+++ b/package.json
@@ -1,72 +1,73 @@
 {
-  "name": "edvances",
-  "version": "1.0.0",
-  "description": "A teaching app by Humantics",
-  "main": "server/start.js",
-  "scripts": {
-    "start": "nodemon --watch server -e js,html server/start.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "angular": "^1.6.2",
-    "angular-animate": "^1.6.2",
-    "angular-file-saver": "^1.1.3",
-    "angular-mocks": "^1.6.2",
-    "angular-ui-bootstrap": "^2.5.0",
-    "angular-ui-router": "^0.4.2",
-    "azure-storage": "^2.1.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.23.0",
-    "bcryptjs": "^2.4.3",
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.16.1",
-    "bootstrap": "^3.3.7",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
-    "connect-session-sequelize": "^4.1.0",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.1",
-    "express-session": "^1.15.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-eslint": "^3.0.1",
-    "gulp-istanbul": "^1.1.1",
-    "gulp-less": "^3.3.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-mocha": "^4.0.1",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.0.1",
-    "jquery-timepicker": "^1.3.3",
-    "karma": "^1.5.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.2",
-    "lodash": "^3.9.3",
-    "merge-stream": "^1.0.1",
-    "multer": "^1.3.0",
-    "ng-file-upload": "^12.2.13",
-    "nodemon": "^1.11.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "paypal-rest-sdk": "^1.7.1",
-    "pg": "^6.1.2",
-    "run-sequence": "^1.2.2",
-    "sequelize": "^3.30.2",
-    "serve-favicon": "^2.4.0",
-    "sinon": "^1.17.7",
-    "socket.io": "^1.7.4",
-    "streamifier": "^0.1.1",
-    "supertest": "^3.0.0"
-  }
+    "name": "edvances",
+    "version": "1.0.0",
+    "description": "A teaching app by Humantics",
+    "main": "server/start.js",
+    "scripts": {
+        "start": "nodemon --watch server -e js,html server/start.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postinstall": "gulp build"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "angular": "^1.6.2",
+        "angular-animate": "^1.6.2",
+        "angular-file-saver": "^1.1.3",
+        "angular-mocks": "^1.6.2",
+        "angular-ui-bootstrap": "^2.5.0",
+        "angular-ui-router": "^0.4.2",
+        "azure-storage": "^2.1.0",
+        "babel-preset-es2015": "^6.22.0",
+        "babel-register": "^6.23.0",
+        "bcryptjs": "^2.4.3",
+        "bluebird": "^3.4.7",
+        "body-parser": "^1.16.1",
+        "bootstrap": "^3.3.7",
+        "chai": "^3.5.0",
+        "chalk": "^1.1.3",
+        "connect-session-sequelize": "^4.1.0",
+        "cookie-parser": "^1.4.3",
+        "express": "^4.14.1",
+        "express-session": "^1.15.1",
+        "gulp": "^3.9.1",
+        "gulp-babel": "^6.1.2",
+        "gulp-concat": "^2.6.1",
+        "gulp-eslint": "^3.0.1",
+        "gulp-istanbul": "^1.1.1",
+        "gulp-less": "^3.3.0",
+        "gulp-livereload": "^3.8.1",
+        "gulp-minify-css": "^1.2.4",
+        "gulp-mocha": "^4.0.1",
+        "gulp-ng-annotate": "^2.0.0",
+        "gulp-notify": "^3.0.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-sass": "^3.1.0",
+        "gulp-sourcemaps": "^2.4.1",
+        "gulp-uglify": "^2.0.1",
+        "jquery-timepicker": "^1.3.3",
+        "karma": "^1.5.0",
+        "karma-chai": "^0.1.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-coverage": "^1.1.1",
+        "karma-mocha": "^1.3.0",
+        "karma-mocha-reporter": "^2.2.2",
+        "lodash": "^3.9.3",
+        "merge-stream": "^1.0.1",
+        "multer": "^1.3.0",
+        "ng-file-upload": "^12.2.13",
+        "nodemon": "^1.11.0",
+        "passport": "^0.3.2",
+        "passport-local": "^1.0.0",
+        "paypal-rest-sdk": "^1.7.1",
+        "pg": "^6.1.2",
+        "run-sequence": "^1.2.2",
+        "sequelize": "^3.30.2",
+        "serve-favicon": "^2.4.0",
+        "sinon": "^1.17.7",
+        "socket.io": "^1.7.4",
+        "streamifier": "^0.1.1",
+        "supertest": "^3.0.0"
+    }
 }
