--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A teaching app by Humantics",
     "main": "server/start.js",
     "scripts": {
-        "start": "nodemon --watch server -e js,html server/start.js",
+        "start": "node server/start.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "postinstall": "gulp build"
     },
