--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node server/start.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "gulp build"
+        "postinstall": "gulp build, npm start"
     },
     "author": "",
     "license": "ISC",
