--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node server/start.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "gulp build"
+        "postinstall": "gulp build && bower install"
     },
     "author": "",
     "license": "ISC",
@@ -24,6 +24,7 @@
         "bluebird": "^3.4.7",
         "body-parser": "^1.16.1",
         "bootstrap": "^3.3.7",
+        "bower": "^1.8.0",
         "chai": "^3.5.0",
         "chalk": "^1.1.3",
         "connect-session-sequelize": "^4.1.0",
