--- a/web.config
+++ b/web.config
@@ -37,7 +37,14 @@
                          </conditions>
                          <action type="Rewrite" url="server/start.js"/>
                     </rule>
-
+                    <!-- Redirect all traffic to SSL -->
+                   <rule name="Force HTTPS" enabled="true">
+                     <match url="(.*)" ignoreCase="false" />
+                     <conditions>
+                       <add input="{HTTPS}" pattern="off" />
+                     </conditions>
+                     <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
+                   </rule>
                </rules>
           </rewrite>
           <!-- You can control how Node is hosted within IIS using the following options -->
