--- a/web.config
+++ b/web.config
@@ -16,6 +16,13 @@
     </handlers>
     <rewrite>
       <rules>
+         <rule name="Redirect to https">
+          <match url="(.*)"/>
+          <conditions>
+           <add input="{HTTPS}" pattern="Off"/>
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+         </rule>
         <!-- Do not interfere with requests for node-inspector debugging -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="^server/start.js\/debug[\/]?" />
